// Dstl (c) Crown Copyright 2024
//
// [START declaration]
syntax = "proto3";
package sapient_msg.bsi_flex_335_v2_0;

import "google/protobuf/timestamp.proto";
import "sapient_msg/proto_options.proto";
// [END declaration]

// [START java_declaration]
option java_multiple_files = true;
option java_package = "uk.gov.dstl.sapientmsg.bsiflex335v2";
option java_outer_classname = "AssociatedDetectionProto";
// [END java_declaration]

// [START messages]
message AssociatedDetection {
    optional google.protobuf.Timestamp timestamp = 1; // UTC timestamp the message was sent
    optional string node_id = 2 [(field_options) = {is_mandatory: true, is_uuid: true}]; // ULID for the node where the assoicated detection has originiated
    optional string object_id = 3 [(field_options) = {is_mandatory: true, is_ulid: true}]; // ULID for the object detected in the environment
    optional AssociationRelation association_type = 4; // Relationship of associated detection to this message
}

enum AssociationRelation {
    ASSOCIATION_RELATION_UNSPECIFIED = 0; // Unset enum
    ASSOCIATION_RELATION_NO_RELATION = 1;
    ASSOCIATION_RELATION_PARENT = 2;
    ASSOCIATION_RELATION_CHILD = 3;
    ASSOCIATION_RELATION_SIBLING = 4;
}
// [END messages]
